build: 降级 Flink 版本至 1.15.2，JDK 版本至 1.8
- Flink 版本从 1.19.0 降级到 1.15.2
- JDK 版本从 11 降级到 1.8
- Kafka Connector 版本调整为 1.15.2
- Flink 相关依赖统一放到根 pom.xml，scope 设置为 provided
- 修复 Java 8 兼容性问题：
  - var 替换为显式类型声明
  - List.copyOf() 替换为 new ArrayList<>()
  - StringBuilder 替换为 StringBuffer（正则场景）
  - 适配 Flink 1.15 API 变更
- 删除不兼容的测试类